--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
+                    <a href="pages/002/Coursing_at_GNS3_until_it_works.html"><img class="post_icon" src="pages/images/coin.png" alt="" width="60%" /></a>
+                </div>
+            </div>
+            <div class="column right">
+
+                <div class="project_description">
+                    <a href="pages/002/Coursing_at_GNS3_until_it_works.html">
+                        <h5><strong><u>Coursing at GNS3 until it works</u></strong></h5>
+                        <p>This post will be a quick one, although it represents the result of long and particularly painful moments spent coursing at GNS3. Our objective is to begin setting up a security lab hosting whatever network appliances we need, along with a Kali Linux machine (i.e., our analysis station) to be used for testing.  Let us all try to keep calm and not rock the damn boat.  </p>
+                    </a><br />
+                    <p class="project_date date"> April 14th, 2024</p>
+                    <p id="tools"> GNS3, VirtualBox</p>
+
+
+                </div>
+
+            </div>
+        </div>
+
+
+        <!-- Project -->
+        <div class="row">
+            <div class="column left">
+                <div class="project_logo">
                     <a href="Project1.html"><img class="post_icon" src="pages/images/telescope.png" alt="" width="60%" /></a>
                 </div>
             </div>
@@ -74,11 +98,12 @@
             </div>
         </div>
 
+
         <!-- Project -->
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/treasure-map.png" alt="" width="60%" /></a>
+                    <a href="pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html"><img class="post_icon" src="pages/images/treasure-map.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
