--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="project_description">
                     <a href="pages/003/Setting_up_Kali_Linux_in_GNS3.html">
-                        <h5><strong><u>Coursing at GNS3 until it works</u></strong></h5>
+                        <h5><strong><u>Setting up Kali Linux in GNS3</u></strong></h5>
                         <p>This post will be a quick one, although it represents the result of long and particularly painful moments spent coursing at GNS3. Our objective is to begin setting up a security lab hosting whatever network appliances we need, along with a Kali Linux machine (i.e., our analysis station) to be used for testing.  Let us all try to keep calm and not rock the damn boat.  </p>
                     </a><br />
                     <p class="project_date date"> April 28th, 2024</p>
