--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
     </header>
 
     <!-- Main Content -->
-    <div class="greyish" style="text-align:center">
+    <div class="greyish" style="text-align:center !important">
+
+        <!-- Additional Section -->
+        <div class="row" >
+            <div class="no_shadow column" style="align-items:center !important">
+                <div class="plain_text">
+                    <p>"Return my treasures to me, and I myself will carry you through the gates of Valhalla. You shall ride eternal. Shiny, and chrome!"</p>
+                </div>
+            </div>
+        </div>
 
 
         <div class="separator center">
@@ -121,21 +130,13 @@
 
             </div>
         </div>
-
-
-
-
-        <!-- Repeat the above structure for other projects -->
-        <!-- Additional Section -->
-        <div class="row">
-            <div class="no_shadow column">
-                <div class="plain_text center">
-                    <p>Return my treasures to me, and I myself will carry you through the gates of Valhalla. You shall ride eternal. Shiny, and chrome!</p>
-                </div>
-            </div>
-        </div>
     </div>
 
+
+
+
+
+    <!-- Repeat the above structure for other projects -->
     <!-- Bottom Section -->
     <div class="bottom">
         Free icons from <a href="https://www.flaticon.com/"><u>flaticon.com</u></a>
