--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="greyish" style="text-align:center !important">
 
         <!-- Additional Section -->
-        <div class="row" >
+        <div class="row">
             <div class="no_shadow column" style="align-items:center !important">
                 <div class="plain_text">
                     <p>"Return my treasures to me, and I myself will carry you through the gates of Valhalla. You shall ride eternal. Shiny, and chrome!"</p>
@@ -129,8 +129,62 @@
                 </div>
 
             </div>
+		</div>
+
+<br>
+<!--
+       <div class="separator center">
+            <div>🍉 Longer Posts 🍉</div>
         </div>
+
+
+            <div class="no_shadow column" style="align-items:center !important">
+                <div class="plain_text">
+                <p><em>(Some might come, as soon as I have some spare time!)</em></p>
+                </div>
+				
+--!>
+			
+			
+			
+			
+			
+					<div class="separator center">
+            <div>🍓 Random Miscellaneous Stuff 🍓</div>
+        </div>
+		
+		        <!-- Project -->
+        <div class="row">
+            <div class="column left">
+                <div class="project_logo">
+                    <a href="pages/004/Memories_of_mint_tea.html"><img class="post_icon" src="pages/images/camel.png" alt="" width="60%" /></a>
+                </div>
+            </div>
+            <div class="column right">
+
+                <div class="project_description">
+                    <a href="pages/004/Memories_of_mint_tea.html">
+                        <h5><strong><u>Memories of mint tea</u></strong></h5>
+						<p>
+						A glimpse into a collection of memories. Postcards of vividly colorful moments, never to be forgotten. Many miles traveled, lots of cigarettes, mint tea and old rusty taxis. Oh and, of course, a cherished poem - half-stolen and humbly rearranged, seasoned with undemanded romanticism and desire of wanderlust.</p>
+                    </a>
+                    <p class="project_date date"> June 1st, 2024</p>
+                    <p id="tools"> A plane ticket</p>
+
+
+                </div>
+
+            </div>
+		</div>
+			
+        </div>
+		
+
+		
+
+
     </div>
+
 
 
 
