--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -53,7 +53,9 @@
 
 
                 <p style="padding:20% 5% 20% 5%">
-                    For any inquiries, please write at <strong>narakurakin@gmail.com</strong> :D
+                    For any inquiries, write at <strong>narakurakin@gmail.com</strong>.
+                    <br />
+                    If you have any chewl ideas or wanna collaborate on something security-related, please reach out :D
                 </p>
 
 
