--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Header -->
     <header>
         <div class="title">
-            <img id="BrandLogo" src="pages/images/brand_logo.png" width="15%" />
+            <img id="BrandLogo" src="pages/images/brand_logo.png" width="25%" />
         </div>
     </header>
 
@@ -76,7 +76,7 @@
             <div class="column right">
 
                 <div class="project_description">
-                    <a href="...">
+                    <a href="pages/002/Long_nights_in_the_crows_nest.html">
                         <h5><strong><u>Long nights in the crow's nest</u></strong></h5>
                         <p>Reconnaissance means discovering as much as we can about a potential target. Merchant vessels tend to travel slower after dark, due to lower visibility. The cabin boy will be given the responsibility of spending the next few nights in the crow’s nest, at the top of the main mast. Hopefully, he won’t fall asleep this time. </p>
                     </a><br />
